--- a/trunk/CR_QuickAddReference/CR_QuickAddReference/CR_QuickAddReference.vbproj
+++ b/trunk/CR_QuickAddReference/CR_QuickAddReference/CR_QuickAddReference.vbproj
@@ -58,6 +58,7 @@
     <Reference Include="DevExpress.CodeRush.PlugInCore" />
     <Reference Include="DevExpress.CodeRush.StructuralParser" />
     <Reference Include="DevExpress.CodeRush.VSCore" />
+    <Reference Include="VSLangProj, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
