--- a/CR_PaintIt/CR_PaintIt/CR_PaintIt.vbproj
+++ b/CR_PaintIt/CR_PaintIt/CR_PaintIt.vbproj
@@ -22,8 +22,7 @@
     <OptionCompare>Binary</OptionCompare>
     <OptionExplicit>On</OptionExplicit>
     <OptionStrict>On</OptionStrict>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace>CR_PaintIt</RootNamespace>
     <StartupObject>WizardTemplate.Form1</StartupObject>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
