--- a/trunk/MiniCodeColumn/MiniCodeColumn/MiniCodeColumn.csproj
+++ b/trunk/MiniCodeColumn/MiniCodeColumn/MiniCodeColumn.csproj
@@ -90,10 +90,11 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Button.bmp" />
+    <None Include="Resources\Button.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
