--- a/trunk/CR_PaintIt/CR_PaintIt/CR_PaintIt.vbproj
+++ b/trunk/CR_PaintIt/CR_PaintIt/CR_PaintIt.vbproj
@@ -122,7 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.vb">
+    <Compile Include="Properties\AssemblyInfo.vb">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Caching.vb" />
