--- a/CR_SortLines/CR_SortLines/CR_SortLines.csproj
+++ b/CR_SortLines/CR_SortLines/CR_SortLines.csproj
@@ -1,7 +1,7 @@
 ﻿<Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4FD3003F-4D83-4873-B7CF-5727F608313F}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -135,9 +135,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="CaseInsensitiveLineComparer.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -150,6 +147,7 @@
     <Compile Include="LinePair.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortDialog.cs">
       <SubType>Form</SubType>
     </Compile>
