CR_LinkBar : Paying back some technical debt with some sensible refactoring.

--- a/CR_LinkBar/CR_LinkBar/CR_LinkBar.vbproj
+++ b/CR_LinkBar/CR_LinkBar/CR_LinkBar.vbproj
@@ -70,9 +70,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\IMenuContainerExt.vb" />
+    <Compile Include="Extensions\SolutionExt.vb" />
     <Compile Include="FileCollection.vb" />
     <Compile Include="FileReference.vb" />
-    <Compile Include="LinkBarFunctions.vb" />
+    <Compile Include="Extensions\ListOfFileCollectionExt.vb" />
+    <Compile Include="LinkBar.vb" />
     <Compile Include="PlugIn1.vb">
       <SubType>Component</SubType>
     </Compile>
