--- a/CR_LinkBar/CR_LinkBar/CR_LinkBar.vbproj
+++ b/CR_LinkBar/CR_LinkBar/CR_LinkBar.vbproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseUIManager.vb" />
+    <Compile Include="UIManager2.vb" />
     <Compile Include="DocumentReference.vb" />
     <Compile Include="Extensions\IMenuContainerExt.vb" />
     <Compile Include="Extensions\SolutionExt.vb" />
