Changes to CR_LinkBar - Changed LoadSave to work with XML - Attempted to adjust Bitmaps to use transparency on Toolbar... failed

--- a/CR_LinkBar/CR_LinkBar/CR_LinkBar.vbproj
+++ b/CR_LinkBar/CR_LinkBar/CR_LinkBar.vbproj
@@ -90,6 +90,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.vb" />
     <Compile Include="WorkspaceCollection.vb" />
+    <Compile Include="XElementExt.vb" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icons\Old\SaveAll.bmp" />
