No longer redrawing the attribute label. Now just drawing a rect over the attribute. Added an options page, but the option on the page doesn't have any effect due to above change. Will update options soon.

--- a/RedGreen/RedGreen/RedGreen.csproj
+++ b/RedGreen/RedGreen/RedGreen.csproj
@@ -99,6 +99,12 @@
     <Compile Include="MbUnitGallioParser.cs" />
     <Compile Include="NullGallioParser.cs" />
     <Compile Include="NUnitGallioParser.cs" />
+    <Compile Include="OptRedGreenPlugIn.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OptRedGreenPlugIn.Designer.cs">
+      <DependentUpon>OptRedGreenPlugIn.cs</DependentUpon>
+    </Compile>
     <Compile Include="PlugIn1.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -124,6 +130,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="OptRedGreenPlugIn.resx">
+      <DependentUpon>OptRedGreenPlugIn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TestIndicator.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
