Updates to CR_MetricShader. These include updates to increase performance by... ...Only processing Members which appear on screen ...Not painting anything if the member falls within the optimal quarter rather than actively painting Color.White.

--- a/CR_MetricShader/CR_MetricShader/CR_MetricShader.vbproj
+++ b/CR_MetricShader/CR_MetricShader/CR_MetricShader.vbproj
@@ -85,6 +85,7 @@
       <DependentUpon>PlugIn1.vb</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.vb" />
+    <Compile Include="SourceRangeExt.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Options1.resx">
