AussieALF (michael@nqmining.com.au): Made some changes so that it persists the Enabled and WordHighlight option

--- a/MiniCodeColumn/MiniCodeColumn/MiniCodeColumn.csproj
+++ b/MiniCodeColumn/MiniCodeColumn/MiniCodeColumn.csproj
@@ -28,7 +28,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\DevExpress.PlugIns\</OutputPath>
+    <OutputPath>Bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
